@startuml

class TesterMainExercise1{
    + buildNetwork(): void
    + main(String[] args): void
}

TesterMainExercise1 --> "3" Wallet: wallet1, wallet2, wallet3 >
TesterMainExercise1 --> "2" MiningNode: miningNode, miningNode2 >
TesterMainExercise1 --> "1" Node: node >
TesterMainExercise1 --> "1" Subnet: subnet >
TesterMainExercise1 --> "1" BlockChainNetwork: network >
TesterMainExercise1 ..> Transaction

class Wallet{
    - userName: String
    - key: String
    - balance: int

    + Wallet(String userName, String key, int balance)
    + getName(): String
    + getKey(): String
    + getBalance(): int 
}

'-------------------------------------------------------------'

'* hay que añadirle un campo para varios objetos Transaction? '
class Node{
    - id: int
    - id_count: int
    - wallet: Wallet

    + Node(Wallet wallet)
    + fullname(): String
    + toString(): String
}

Node <|-- MiningNode

class MiningNode{
    - coins: int

    + MiningNode(Wallet wallet, int coins)
    + fullname(): String
}

'-------------------------------------------------------------'

'* id_count esta en duda '
class Subnet{
    - id: int
    - id_count: int

    + Subnet(MiningNode... miningNodes)
    + toString(): String
}

Subnet --> "1..*" MiningNode: miningNodes >

class BlockChainNetwork{
    - name: String
    
    + BlockChainNetwork(String name)
    + connect(Node node): BlockChainNetwork
    + connect(Subnet subnet): BlockChainNetwork
    + toString(): String
}

BlockChainNetwork --> "1..*" Node: nodosSimples
BlockChainNetwork --> "1..*" MiningNode: nodosMineros
BlockChainNetwork --> "1..*" Subnet: subredes

'-------------------------------------------------------------'

'* hay que añadirle algo más? '
class Transaction{
    + Transaction(Wallet wallet1, Wallet wallet2, int coins)
}


@enduml